<?xml version="1.0"?>
<package format="2">
  <name>imu_to_odom</name>
  <version>0.0.0</version>
  <description>finds odom through IMU integration, based on eth odom predict </description>

  <author email="ztaylor@ethz.ch">Zachary Taylor</author>

  <maintainer email="ztaylor@ethz.ch">Zachary Taylor</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>minkindr</depend>
  <depend>minkindr_conversions</depend>
  <depend>eigen_catkin</depend>
</package>
